src/components/about/About.module.css
.aboutSection {
  display: flex;
  flex-flow: row wrap-reverse;
  justify-content: flex-start;
  align-items: center;
  height: 100vh;
  padding-top: 5rem;
  background: #153084;
}

.about h2 {
  color: #008b9c;
}

.about p {
  font-size: 1.2rem;
  line-height: 1.5rem;
  display: inline;
}

i {
  color: #008b9c;
  display: inline;
  font-size: 1.2rem;
  line-height: 1.5rem;
}

.about {
  margin: auto;
  padding: 1.5rem 5rem;
  width: 30rem;
  height: 17rem;
  border-radius: 50px;
  background: #153084;
  box-shadow:
    inset 18px 18px 36px #122970,
    inset -18px -18px 36px #183798;
}

.portrait {
  margin: auto;
  border-radius: 150px;
  width: 20rem;
  height: 20rem;
  background: linear-gradient(145deg, #2353e2, #1e46be);
  box-shadow:
    6px 6px 12px #1c42b3,
    -6px -6px 12px #265af3;
}

@media (max-width: 700px) {
  .about {
    padding: 1.5rem 3rem;
    width: 15rem;
    height: 20rem;
    top: calc(10vh + 15rem + 5rem);
    left: calc(50vw - 7.5rem - 3rem);
  }

  .about p {
    font-size: 1rem;
    line-height: 1.2rem;
  }

  .portrait {
    width: 15rem;
    height: 15rem;
  }
}

